kings-showcase/kings-app-demo/app/app-ingress.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: kings-env
  labels:
    app: app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      version: v1
  template:
    metadata:
      labels:
        app: app
        version: v1
    spec:
      containers:
        - name: app
          image: app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: kings-env
  name: app-svc
  labels:
    app: app
    service: app-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: app

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kings-env
  name: app-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: env.kings.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-svc
                port:
                  number: 8080
